# fairy-core

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSES.md  MAINTAINERS.md  NOTICE  PR_SUBMISSION_GUIDE.md  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_LICENSES.md  dwc_starter_fixed.yml  pyproject.toml  pytest.ini  repo-tree.txt  requirements-dev.txt
.github/workflows/: ci.yml
.out/: .fairy_last_run.json  report.json  report.md
.tmp/: files.csv  merged.csv  samples.csv
decisions/: 0001-record-architecture-decisions.md  0002-rulepacks-vs-runner-separation.md  0003-dataset-bundle-manifest.md  0004-rulepack-organization.md  0005-packaging-as-first-class-packagers.md  0006-dataset-fingerprint-and-pass-attestation-ids.md  0007-profiles-as-workflow-composition.md  README.md  template.md
demos/: README.md
docs/: cli.md  getting-started.md  index.md  manifest.md  params.md  reporting.md  rule-types.md  understanding-errors.md
schemas/: manifest_v1.schema.json  preflight_report_v1.schema.json  registry.yaml  sample_table.py
scripts/: update_goldens.py
tasks/: prd-stabilize-json-report-schema.md
tests/: README.md  conftest.py  helpers.py  test_cli_preflight.py  test_dataset_id.py  test_manifest_determinism.py  test_manifest_role_inference.py  test_manifest_schema_smoke.py  test_manifest_v1_integration_preflight.py  test_preflight_profiles_registry.py  test_preflight_report_schema.py  test_rule_validators.py  test_rulepack_runner_integration.py  test_schema_drift_guard.py  test_schema_validation_edge_cases.py
(+91 files in other folders)
