[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fairy-core"
version = "0.1.0"
description = "FAIRy — local-first, rules-based validator/fixer for research datasets"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Jennifer Slotnick" }]
license = { text = "AGPL-3.0-only" }
dependencies = [
  "pandas>=2.1",
  "pyyaml>=6.0",
  "python-dateutil>=2.8"
]

# Optional extras you can add later:
[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "build", "twine"]
# frictionless = ["frictionless>=5.16"]  # uncomment when you add the adapter
# ui lives elsewhere; don't include Streamlit here

[project.scripts]
fairy = "fairy.cli:main"

[project.urls]
Homepage = "https://github.com/<you>/fairy-core"
Repository = "https://github.com/<you>/fairy-core"
Issues = "https://github.com/<you>/fairy-core/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

# (optional) tooling configs; keep minimal in core
[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E","F","I","B","UP"]
lint.ignore = ["E203","E266"]

[tool.isort]
profile = "black"
line_length = 100
